// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radio > props > : checked 1`] = `
<div
  class="t-radio-group"
  role="radiogroup"
>
  
  <div
    class="t-radio t-radio--left t-radio--block"
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
      value="0"
    />
    <div
      class="t-radio__icon t-radio__icon--left"
    >
      <div
        class="t-radio__icon-circle"
      />
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        0
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  <div
    class="t-radio t-radio--left t-radio--block"
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
      value="1"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        1
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  
  <!---->
</div>
`;

exports[`Radio > props > : keys 1`] = `
<div
  class="t-radio-group"
  role="radiogroup"
>
  
  <div
    class="t-radio t-radio--left t-radio--block"
  >
    <input
      class="t-radio__original"
      disabled=""
      name=""
      type="radio"
      value="1"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--disabled"
    >
      <div
        class="t-radio__icon-circle t-radio__icon-circle--disabled"
      />
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title t-radio__title--disabled"
        style=""
      >
        单选
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  <div
    class="t-radio t-radio--left t-radio--block"
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
      value="2"
    />
    <div
      class="t-radio__icon t-radio__icon--left"
    >
      <div
        class="t-radio__icon-circle"
      />
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  
  <!---->
</div>
`;

exports[`Radio > props > :placement 1`] = `
<div
  class="t-radio t-radio--right t-radio--block"
>
  <input
    class="t-radio__original"
    name=""
    type="radio"
  />
  <div
    class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
  >
    <!---->
    line
  </div>
  <div
    class="t-radio__content"
  >
    <!---->
    <!---->
  </div>
  <div
    class="t-radio__border t-radio__border--right"
  />
</div>
`;
